@startuml DiagrammeClasseUML
' Diagramme de classes — basé sur l'implémentation réelle du projet
' users/models.py · patients/models.py · audit/models.py · predictions/predict_mortalite.py
top to bottom direction
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam packageStyle rectangle
skinparam backgroundColor white
skinparam linetype ortho
skinparam ranksep 45
skinparam nodesep 30

skinparam class {
    BackgroundColor #FFFFFF
    BorderColor #64748B
    FontColor #0F172A
    ArrowColor #64748B
}
skinparam package {
    BorderColor #CBD5E1
    FontColor #0F172A
    BackgroundColor #F8FAFC
}

' ===== SÉCURITÉ & ACCÈS =====
package "Sécurité & Accès" #FCE7F3 {
    class Role {
        +id : int
        +nom : string
        --
        Valeurs : super_admin
        chef_service · professeur
        resident
    }

    class Utilisateur {
        +id : int
        +email : string
        +nom : string
        +prenom : string
        +telephone : string
        +personal_notes : text
        +is_active : bool
        +is_staff : bool
        +date_creation : datetime
        --
        +set_password(raw) : void
        +check_password(raw) : bool
        +__str__() : string
    }

    class AuditLog {
        +id : int
        +action : text
        +entite : string
        +entite_id : int
        +details : text
        +adresse_ip : string
        +date : datetime
        --
        +__str__() : string
    }

    class HiddenAuditLog {
        +id : int
        +hidden_at : datetime
        --
        unique(user, audit_log)
    }
}

' ===== DOSSIER PATIENT =====
package "Dossier Patient" #FEF3C7 {
    class Patient {
        +id : int
        +id_patient : string
        +id_enregistrement_source : string
        +nom, prenom : string
        +age : int
        +sexe : enum(M/F/O)
        +maladie : string
        +date_naissance : date
        +date_admission : date
        +statut_inclusion : string
        +statut_consentement : string
        +icc_charlson : string
        .. sections plates (162 champs) ..
        +demographie_* (12 champs)
        +irc_* (13 champs)
        +comorbidite_* (3 champs)
        +presentation_* (14 champs)
        +biologie_* (21 champs)
        +imagerie_* (12 champs)
        +dialyse_* (21 champs)
        +qualite_* (12 champs)
        +complication_* (9 champs)
        +traitement_* (2 champs)
        +devenir_* (8 champs)
        .. JSONFields miroirs ..
        +demographie_data : JSONField
        +irc_data : JSONField
        +biologie_data : JSONField
        +dialyse_data : JSONField
        +devenir_data : JSONField
        +extra_data : JSONField
        +created_at, updated_at : datetime
        --
        +save() : void
        +__str__() : string
    }

    class PatientFormTemplate {
        +id : int
        +name : string
        +source_file_name : string
        +sheet_name : string
        +imported_at : datetime
        --
        +__str__() : string
    }

    class PatientFormField {
        +id : int
        +key : string
        +label : string
        +field_type : enum(text_short, text_long,\n  single_choice, multiple_choice,\n  date, integer, decimal,\n  boolean, auto)
        +order : int
        +choices : JSONField
        +source_hint : string
        +is_required : bool
        --
        unique(template, key)
    }
}

' ===== PRÉTRAITEMENT =====
package "Prétraitement & Validation" #DBEAFE {
    class PreprocessValidationRequest {
        +id : int
        +session_id : string
        +source : enum(corrected, original)
        +source_file_name : string
        +submitted_at : datetime
        +status : enum(pending, approved, rejected)
        +reviewed_at : datetime
        +comment : text
        +rows_count : int
        +columns_count : int
        +quality_score : float
        --
        +__str__() : string
    }

    class DynamicColumnRequest {
        +id : int
        +action : enum(add, delete)
        +column_key : string
        +column_label : string
        +field_type : string
        +submitted_at : datetime
        +status : enum(pending, approved, rejected)
        +reviewed_at : datetime
        +comment : text
    }
}

' ===== ANALYSE & IA =====
package "Analyse & IA" #DCFCE7 {
    class PredictionMortalite {
        ' Résultat retourné par predict_mortalite.py
        +patient_id : int
        +probabilite_deces : float
        +probabilite_calibree : float
        +score_risque : float
        +niveau_risque : enum(faible, modere, eleve)
        +seuil_faible_modere : float
        +seuil_modere_eleve : float
        +recommendation : string
        +auc_cv : float
        +model_version : string
        +factors : list[dict]
        --
        +predict(patient) : dict
        +load_model() : SVM
    }
}

' ===== HÉRITAGE =====
' (implémenté via Role FK, pas d'héritage Python)

' ===== RELATIONS =====
Role "1" *-- "0..*" Utilisateur : attribué à

Utilisateur "1" *-- "0..*" AuditLog : génère
Utilisateur "1" *-- "0..*" HiddenAuditLog : masque
AuditLog "1" *-- "0..*" HiddenAuditLog : masqué dans

Utilisateur "1" *-- "0..*" PreprocessValidationRequest : soumet
Utilisateur "1" *-- "0..*" PreprocessValidationRequest : révise
Utilisateur "1" *-- "0..*" DynamicColumnRequest : soumet
Utilisateur "1" *-- "0..*" DynamicColumnRequest : révise

PatientFormTemplate "1" *-- "1..*" PatientFormField : définit

Patient "1" --> "0..*" PredictionMortalite : prédiction produite pour

' Aide à l'agencement
Role -[hidden]right-> PatientFormTemplate
Utilisateur -[hidden]down-> Patient
Patient -[hidden]right-> PatientFormTemplate
PatientFormTemplate -[hidden]down-> PreprocessValidationRequest
PreprocessValidationRequest -[hidden]right-> DynamicColumnRequest
PredictionMortalite -[hidden]left-> DynamicColumnRequest

@enduml
